Adding app config file etc.

--- a/semantic/index.html
+++ b/semantic/index.html
@@ -29,6 +29,10 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css">
 
 
+  <script src="https://cdnjs.com/libraries/semantic-ui"></script>
+  <script src="http://www.jsdelivr.com/#!semantic-ui"></script>
+  <script src="http://open.bootcss.com/semantic-ui/"></script>
+
   <style type="text/css">
 
     .hidden.menu {
@@ -158,9 +162,7 @@ $('.ui.search')
 
       // create sidebar and attach to menu open
       $('.ui.sidebar')
-        .sidebar('attach events', '.toc.item')
-      ;
-
+        .sidebar('attach events', '.toc.item');
     })
   ;
   </script>
@@ -218,9 +220,10 @@ $('.ui.search')
 
     <div class="ui text container">
       <h1 class="ui inverted header">
-        Bank IFSC code Finder
+        --
       </h1>
       <h2>Do whatever you want when you want to.</h2>
+
 
 
 <div class="ui search">
