--- a/semantic/index.html
+++ b/semantic/index.html
@@ -9,30 +9,33 @@
 
   <!-- Site Properties -->
   <title>Homepage - Semantic</title>
-  <link rel="stylesheet" type="text/css" href="../dist/components/reset.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/site.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/reset.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/site.css">
 
-  <link rel="stylesheet" type="text/css" href="../dist/components/container.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/grid.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/header.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/image.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/menu.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/container.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/grid.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/header.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/image.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/menu.css">
 
-  <link rel="stylesheet" type="text/css" href="../dist/components/divider.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/dropdown.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/segment.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/button.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/list.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/icon.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/sidebar.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/transition.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/divider.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/dropdown.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/segment.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/button.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/list.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/icon.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/sidebar.css">
+  <link rel="stylesheet" type="text/css" href="../semantic/dist/components/transition.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css">
 
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 
-  <script src="https://cdnjs.com/libraries/semantic-ui"></script>
-  <script src="http://www.jsdelivr.com/#!semantic-ui"></script>
-  <script src="http://open.bootcss.com/semantic-ui/"></script>
 
+    <meta charset="utf-8" />
+    <title>Semantic UI CDN</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
   <style type="text/css">
 
     .hidden.menu {
@@ -123,26 +126,6 @@
 
   </style>
 
-  <script src="assets/library/jquery.min.js"></script>
-  <script src="../dist/components/visibility.js"></script>
-  <script src="../dist/components/sidebar.js"></script>
-  <script src="../dist/components/transition.js"></script>
-
- <script>
-$('.ui.search')
-  .search({
-    apiSettings: {
-      url: '//api.github.com/search/repositories?q={query}'
-    },
-    fields: {
-      results : 'items',
-      title   : 'name',
-      url     : 'html_url'
-    },
-    minCharacters : 3
-  });
-</script>
-
   <script>
   $(document)
     .ready(function() {
@@ -165,7 +148,7 @@ $('.ui.search')
         .sidebar('attach events', '.toc.item');
     })
   ;
-  </script>
+  </script> 
 </head>
 <body>
 
@@ -218,22 +201,45 @@ $('.ui.search')
       </div>
     </div>
 
+    <script>
+        // searches across any array/object of searchable objects
+        var
+        content = [
+            {
+                title: 'Horse',
+                description: 'An Animal',
+            },
+            {
+                title: 'Cow',
+                description: 'Another Animal',
+            }
+        ]
+        ;
+        $('.ui.search')
+            .search({
+                source : content,
+                searchFields   : [
+                    'title'
+                ],
+                fullTextSearch: false
+            })
+        ;
+    </script>
+
     <div class="ui text container">
-      <h1 class="ui inverted header">
-        --
-      </h1>
-      <h2>Do whatever you want when you want to.</h2>
+        <h1 class="ui inverted header">
+            --
+        </h1>
+        <h2>Do whatever you want when you want to.</h2>
 
 
+        <div class="ui search">
+            <div class="ui left icon input">
+                <input class="prompt" type="text" placeholder="Search Bugger">
+                <i class="github icon"></i>
+            </div>
+        </div>
 
-<div class="ui search">
-  <div class="ui left icon input">
-    <input class="prompt" type="text" placeholder="Search GitHub">
-    <i class="github icon"></i>
-  </div>
-</div>
-
-      <div class="ui huge primary button">Get Started <i class="right arrow icon"></i></div>
     </div>
 
   </div>
@@ -250,7 +256,7 @@ $('.ui.search')
           <p>Yes that's right, you thought it was the stuff of dreams, but even bananas can be bioengineered.</p>
         </div>
         <div class="six wide right floated column">
-          <img src="assets/images/wireframe/white-image.png" class="ui large bordered rounded image">
+          <img src="https://semantic-ui.com/examples/assets/images/wireframe/white-image.png" class="ui large bordered rounded image">
         </div>
       </div>
       <div class="row">
@@ -278,7 +284,7 @@ $('.ui.search')
         <div class="column">
           <h3>"I shouldn't have gone with their competitor."</h3>
           <p>
-            <img src="assets/images/avatar/nan.jpg" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
+            <img src="https://semantic-ui.com/examples/assets/images/avatar/nan.jpg" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
           </p>
         </div>
       </div>
